--- a/style2.css
+++ b/style2.css
@@ -56,6 +56,9 @@ body{
     letter-spacing: 0.5px;
     line-height: 35px;
 }
+.t5{
+    font-weight: 500;
+}
 .target, .insight{
     padding: 20px 0;
     line-height: 35px;
@@ -68,7 +71,9 @@ body{
 .t2{
     font-size: 16px;
 }
-
+.archi2{
+    width: 1000px;
+}
 li{
     list-style-type: circle;
     padding: 0 0 20px 0;
@@ -80,7 +85,7 @@ li{
     margin-top: 30px;
 }
 .viewbtn{
-    background-color: #9553A0;
+    background-color: orange;
     color: white;
     text-transform: uppercase;
     letter-spacing: 0.5px;
@@ -92,9 +97,9 @@ li{
     cursor: pointer;
 }
 .viewbtn:hover{
-    border: 2px solid #9553A0 ;
+    border: 2px solid orange ;
     background-color: white;
-    color: #9553A0;
+    color: orange;
     
 }
 
